samples/_failures_safe/1761040222_e72cbb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fa76795f.c: In function ‘main’:
./samples/SAFE/__tmp_fa76795f.c:164:9: error: expected declaration or statement at end of input
  164 |         }
      |         ^
./samples/SAFE/__tmp_fa76795f.c:164:9: error: expected declaration or statement at end of input
